Change uses to run for flake - (Task #41)
---
Task #41: Migrate Build Infrastructure from Travis-CI to Github Actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,7 +83,7 @@ jobs:
       # Run flake8
       # --------------------------------------------
       - name: Run - flake8
-        uses: flake8 ./VirtualSatelliteCAD --count --show-source --statistics
+        run: flake8 ./VirtualSatelliteCAD --count --show-source --statistics
 
   # -----------------------------------------------------
   # Build and Test - FreeCAD Module Tests
