--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -118,14 +118,22 @@ jobs:
           architecture: x64
       
       # --------------------------------------------
+      # Perform various setup operations
+      # --------------------------------------------      
+      - name: Setup - Prepare OS
+        uses: virtualsatellite/ci-actions/ci-setup-action@v2
+        with:
+           xvfb: -x
+           
+      # --------------------------------------------
       # Setup Environment via Ant
       # TODO: description
       # TODO: action
       # -------------------------------------------- 
-      - name: Setup - JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+#       - name: Setup - JDK 1.8
+#         uses: actions/setup-java@v1
+#         with:
+#           java-version: 1.8
       - name: Build with Ant
         run: ant SetupEnvironment
         
@@ -133,7 +141,7 @@ jobs:
       # Run module tests
       # --------------------------------------------
       - name: Run - Module tests
-        run: ./squashfs-root/AppRun -M $GITHUB_WORKSPACE/VirtualSatelliteCAD -t TestVirtualSatelliteApp -l #--log-file "FreeCAD.log"
+        run: xvfb-run ./squashfs-root/AppRun -M $GITHUB_WORKSPACE/VirtualSatelliteCAD -t TestVirtualSatelliteApp -l #--log-file "FreeCAD.log"
 
       # --------------------------------------------
       # Upload FreeCAD log
@@ -142,7 +150,7 @@ jobs:
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
-          name: SWTBot Screenshots
+          name: FreeCAD.log
           path: 
             ~/.FreeCAD/FreeCAD.log
 
