--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,40 +58,40 @@ jobs:
   # -----------------------------------------------------
   # Build and Test - FreeCAD Module flake8
   # -----------------------------------------------------
-#   flake:
-#     name: Build and Test - FreeCAD Module flake8
-#     runs-on: ubuntu-18.04
-#     needs: [verify]
-# 
-#     steps:
+  flake:
+    name: Build and Test - FreeCAD Module flake8
+    runs-on: ubuntu-18.04
+    needs: [verify]
+
+    steps:
       # --------------------------------------------
       # Checks out a copy of the repository
       # --------------------------------------------
-#       - name: Setup - Checkout code
-#         uses: actions/checkout@v2
+      - name: Setup - Checkout code
+        uses: actions/checkout@v2
       
       # --------------------------------------------
       # Setup python
       # --------------------------------------------
-#       - name: Setup - Python
-#         uses: actions/setup-python@v1
-#         with:
-#           python-version: 3.6
-#           architecture: x64
+      - name: Setup - Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.6
+          architecture: x64
       
       # --------------------------------------------
       # Install dependencies
       # --------------------------------------------
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install flake8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
       
       # --------------------------------------------
       # Run flake8
       # --------------------------------------------
-#       - name: Run - flake8
-#         run: flake8 ./VirtualSatelliteCAD --count --show-source --statistics
+      - name: Run - flake8
+        run: flake8 ./VirtualSatelliteCAD --count --show-source --statistics
 
   # -----------------------------------------------------
   # Build and Test - FreeCAD Module Tests
@@ -118,7 +118,7 @@ jobs:
           architecture: x64
       
       # --------------------------------------------
-      # Perform various setup operations
+      # Setup Java and xvfb
       # --------------------------------------------      
       - name: Setup - Prepare OS
         uses: virtualsatellite/ci-actions/ci-setup-action@v2
@@ -127,13 +127,7 @@ jobs:
            
       # --------------------------------------------
       # Setup Environment via Ant
-      # TODO: description
-      # TODO: action
       # -------------------------------------------- 
-#       - name: Setup - JDK 1.8
-#         uses: actions/setup-java@v1
-#         with:
-#           java-version: 1.8
       - name: Build with Ant
         run: ant SetupEnvironment
         
@@ -141,7 +135,7 @@ jobs:
       # Run module tests
       # --------------------------------------------
       - name: Run - Module tests
-        run: xvfb-run ./squashfs-root/AppRun -M $GITHUB_WORKSPACE/VirtualSatelliteCAD -t TestVirtualSatelliteApp -l #--log-file "FreeCAD.log"
+        run: xvfb-run ./squashfs-root/AppRun -M $GITHUB_WORKSPACE/VirtualSatelliteCAD -t TestVirtualSatelliteApp -l
 
       # --------------------------------------------
       # Upload FreeCAD log
@@ -150,91 +144,103 @@ jobs:
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
-          name: FreeCAD.log
+          name: Module test log
           path: 
             ~/.FreeCAD/FreeCAD.log
 
   # -----------------------------------------------------
   # Build and Test - FreeCAD All Tests
   # -----------------------------------------------------
-#   freeCadTests:
-#     name: Build and Test - FreeCAD All Tests
-#     runs-on: ubuntu-18.04
-#     needs: [verify]
-# 
-#     steps:
+  freeCadTests:
+    name: Build and Test - FreeCAD All Tests
+    runs-on: ubuntu-18.04
+    needs: [verify]
+
+    steps:
       # --------------------------------------------
       # Checks out a copy of the repository
       # --------------------------------------------
-#       - name: Setup - Checkout code
-#         uses: actions/checkout@v2
+      - name: Setup - Checkout code
+        uses: actions/checkout@v2
       
       # --------------------------------------------
       # Setup python
       # --------------------------------------------
-#       - name: Setup Python
-#         uses: actions/setup-python@v1
-#         with:
-#           python-version: 3.6
-#           architecture: x64
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.6
+          architecture: x64
       
       # --------------------------------------------
+      # Setup Java and xvfb
+      # --------------------------------------------      
+      - name: Setup - Prepare OS
+        uses: virtualsatellite/ci-actions/ci-setup-action@v2
+        with:
+           xvfb: -x
+           
+      # --------------------------------------------
       # Setup Environment via Ant
-      # TODO: description
-      # TODO: action
       # -------------------------------------------- 
-#       - name: Setup - JDK 1.8
-#         uses: actions/setup-java@v1
-#         with:
-#           java-version: 1.8
-#       - name: Build with Ant
-#         run: ant SetupEnvironment
-#         
+      - name: Build with Ant
+        run: ant SetupEnvironment
+        
       # --------------------------------------------
       # Run FreeCAD tests
       # --------------------------------------------
-#       - name: Run - FreeCAD tests
-#         run: ./squashfs-root/AppRun -M $GITHUB_WORKSPACE -t 0 -l --log-file "FreeCAD.log"
-      
+      - name: Run - FreeCAD tests
+        run: xvfb-run ./squashfs-root/AppRun -M $GITHUB_WORKSPACE -t 0 -l
+
+      # --------------------------------------------
+      # Upload FreeCAD log
+      # --------------------------------------------
+      - name: Failure - Upload FreeCAD log
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: FreeCAD test log
+          path: 
+            ~/.FreeCAD/FreeCAD.log
 
   # -----------------------------------------------------
   # Build, Assemble and Deploy Job
   # -----------------------------------------------------
-#   deploy:
-#     name: Build, Assemble and Deploy
-#     runs-on: ubuntu-18.04
-#     needs: [flake, moduleTests, freeCadTests]
-#     
-#     steps:
+  deploy:
+    name: Build, Assemble and Deploy
+    runs-on: ubuntu-18.04
+    needs: [flake, moduleTests, freeCadTests]
+    
+    steps:
       # --------------------------------------------
       # Checks out a copy of your repository
       # --------------------------------------------
-#       - name: Setup - Checkout code
-#         uses: actions/checkout@v2
+      - name: Setup - Checkout code
+        uses: actions/checkout@v2
 
       # --------------------------------------------
       # Perform various setup operations
       # --------------------------------------------
-#       - name: Setup - Prepare OS
-#         uses: virtualsatellite/ci-actions/ci-setup-action@master
+      - name: Setup - Prepare OS
+        uses: virtualsatellite/ci-actions/ci-setup-action@master
 
       # --------------------------------------------
       # Build and Deploy Decision
       # --------------------------------------------
-#       - name: Build - Build and Deploy Decision
-#         id: build_decision
-#         uses: virtualsatellite/ci-actions/ci-build-decision-action@master
+      - name: Build - Build and Deploy Decision
+        id: build_decision
+        uses: virtualsatellite/ci-actions/ci-build-decision-action@master
 
       # --------------------------------------------
       # Development and Feature branches
       # --------------------------------------------
-#       - name: Build - Assemble
-#         run: |
-#           pushd .
-#           cd ..  
-#           zip -r VirtualSatellite4_FreeCAD_mod_Release_$VERSION.zip VirtualSatellite4-FreeCAD-mod/VirtualSatelliteCAD -x "*/.*"
-#           tar --exclude="*/.*" -czvf VirtualSatellite4_FreeCAD_mod_Release_$VERSION.tar.gz VirtualSatellite4-FreeCAD-mod/VirtualSatelliteCAD
-#           popd
+      - name: Build - Assemble
+        run: |
+          pushd .
+          cd ..  
+          zip -r VirtualSatellite4_FreeCAD_mod_Release_$VERSION.zip VirtualSatellite4-FreeCAD-mod/VirtualSatelliteCAD -x "*/.*"
+          tar --exclude="*/.*" -czvf VirtualSatellite4_FreeCAD_mod_Release_$VERSION.tar.gz VirtualSatellite4-FreeCAD-mod/VirtualSatelliteCAD
+          popd
 ##         uses: virtualsatellite/ci-actions/ci-maven-build-action@master
 ##         with:
 ##           build_job: assemble
@@ -243,19 +249,19 @@ jobs:
       # ---------------------------------------------
       # Deploying to github releases
       # --------------------------------------------
-#       - name: Build - Deploy GH
+      - name: Build - Deploy GH
 ##         uses: virtualsatellite/ci-actions/ci-deploy-gh-product-action@master
 ##         with:
 ##           build_profile: ${{ steps.build_decision.outputs.build_type }}
 ##           gh_token: ${{ secrets.GITHUB_TOKEN }}
-#         run: |
-#           echo "--- About to deploy to GitHub Releases"
-#           ${{ github.action_path }}/../bash/deploy_github_release.sh \
-#             --profile ${{ steps.build_decision.outputs.build_type }} \
-#             --token ${{ secrets.GITHUB_TOKEN }} \
-#             --ref ${{ github.ref}} \
-#             --repository ${{ github.repository }} \
-#             --sha ${{ github.sha }}
-#         shell: bashh
-#         if: ${{ steps.build_decision.outputs.deploy_type == 'deploy' }}
+        run: |
+          echo "--- About to deploy to GitHub Releases"
+          ${{ github.action_path }}/../bash/deploy_github_release.sh \
+            --profile ${{ steps.build_decision.outputs.build_type }} \
+            --token ${{ secrets.GITHUB_TOKEN }} \
+            --ref ${{ github.ref}} \
+            --repository ${{ github.repository }} \
+            --sha ${{ github.sha }}
+        shell: bashh
+        if: ${{ steps.build_decision.outputs.deploy_type == 'deploy' }}
       
