Update path to deploy script - (Task #41)
---
Task #41: Migrate Build Infrastructure from Travis-CI to Github Actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -254,7 +254,7 @@ jobs:
 ##           gh_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "--- About to deploy to GitHub Releases"
-          ${{ github.action_path }}/../bash/deploy_github_release.sh \
+          ./.github/bash/deploy_github_release.sh \
             --profile ${{ steps.build_decision.outputs.build_type }} \
             --token ${{ secrets.GITHUB_TOKEN }} \
             --ref ${{ github.ref}} \
