Make shell file executable - (Task #41)
---
Task #41: Migrate Build Infrastructure from Travis-CI to Github Actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -254,6 +254,7 @@ jobs:
 ##           gh_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "--- About to deploy to GitHub Releases"
+          chmod +x ./bash/deploy_github_release.sh
           ./bash/deploy_github_release.sh \
             --profile ${{ steps.build_decision.outputs.build_type }} \
             --token ${{ secrets.GITHUB_TOKEN }} \
