--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -117,6 +117,14 @@ jobs:
           architecture: x64
       
       # --------------------------------------------
+      # Install dependencies
+      # --------------------------------------------
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install urllib3
+      
+      # --------------------------------------------
       # Setup Java and xvfb
       # --------------------------------------------      
       - name: Setup - Prepare OS
